remove white color from bar chart text to avoid invisibility

--- a/Assessments.Frontend.Web/wwwroot/css/categorybar.css
+++ b/Assessments.Frontend.Web/wwwroot/css/categorybar.css
@@ -228,6 +228,10 @@ li.active  .category_item.NR {
     color: white;
 }
 
+span.percent {
+    color: #262F31;
+}
+
 .active .RE span,
 .active .CR span,
 .active .EN span,
