--- a/Assessments.Frontend.Web/wwwroot/css/rl2021.css
+++ b/Assessments.Frontend.Web/wwwroot/css/rl2021.css
@@ -1,5 +1,5 @@
 h1, h2, h3 {
-    color: #0f0f0f;
+    color: #262F31;
 }
 
 .page-header h1 {
